--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,11 @@
-/* styles go here */
+.container {
+  margin-bottom: 20px;
+}
+
+.form__field {
+  display: block;
+}
+
+.form__field:not(:last-child) {
+  margin-bottom: 10px;
+}
